--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "build": "babel src --out-dir dist --source-maps true"
+    "build": "babel src --out-dir dist --source-maps true",
+    "docs": "jsdoc2md ./src/** --global-index-format grouped > README.md"
   },
   "author": "Joseph Surin <joseph.surin@gmail.com>",
   "license": "ISC",
