add repo to package.json

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "docs": "jsdoc2md ./src/** --global-index-format grouped > README.md"
   },
   "author": "Joseph Surin <joseph.surin@gmail.com>",
+  "repository": {"type": "git", "url": "https://github.com/fumetsuu/su-simple-cache"},
   "license": "ISC",
   "dependencies": {
     "md5": "^2.2.1"
